[workspace]
resolver = "2"
members = [
  "crates/l2/starknet-core-contract-client",
    "crates/l2/ethereum-instance", "crates/l2/starknet-eth-bridge-client", "crates/l2/starknet-token-bridge-client", "crates/l2/starkgate-manager-client", "crates/l2/utils", "crates/l2/starknet-erc20-client", "crates/l2/starkgate-registry-client", "crates/l2/starknet-proxy-client",
]

[workspace.package]
authors = ["Starkware Exploration Team", "OnlyDust Contributors"]
edition = "2021"
repository = "https://github.com/keep-starknet-strange/zaun/"
version = "0.1.0"

[workspace.dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "f0e5b194f09c533feb10d1a686ddb9e5946ec107" }
log = "0.4.20"
thiserror = "1.0.51"
num-traits = "0.2.17"
async-trait = "0.1.74"
dirs = "5.0.1"
serde_json = "1.0.108"
hex = "0.4.3"



