[package]
name = "appchain-core-contract-client"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
starknet = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
utils = { path = "../utils" }
tokio = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
async-trait = { workspace = true }
starknet-proxy-client = { path = "../starknet-proxy-client"}