[package]
name = "ethereum-instance"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
ethers = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
utils = { path = "../utils" }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["rt", "macros", "parking_lot"] }
