[package]
name = "starknet-core-contract-client"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
async-trait = { workspace = true }
alloy = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
