[package]
name = "starknet-erc20-client"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
async-trait = { workspace = true }
utils = { path = "../utils" }
starknet-proxy-client = { path = "../starknet-proxy-client"}
ethereum-instance = { path = "../ethereum-instance" }
