[package]
name = "ethereum-instance"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
dirs = { workspace = true }
ethers = { workspace = true }
hex = { workspace = true }
log = "0.4.20"
serde_json = { workspace = true }
thiserror = { workspace = true }
utils = { path = "../utils" }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["rt", "macros", "parking_lot"] }
