[package]
name = "starknet-core-contract-client"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
ethers = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
async-trait = { workspace = true }
utils = { path = "../utils" }
starknet-proxy-client = { path = "../starknet-proxy-client"}
