[package]
name = "starknet-core-contract-client"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
ethers = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
starknet-proxy-client = { path = "../starknet-proxy-client" }
thiserror = { workspace = true }
utils = { path = "../utils" }
