[package]
name = "starknet-erc20-client"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
ethereum-instance = { path = "../ethereum-instance" }
ethers = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
starknet-proxy-client = { path = "../starknet-proxy-client" }
thiserror = { workspace = true }
utils = { path = "../utils" }
