[package]
name = "starknet-proxy-client"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
ethereum-instance = { path = "../ethereum-instance" }
ethers = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
utils = { path = "../utils" }
