[package]
name = "appchain-core-contract-client"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
appchain-utils = { path = "../appchain-utils" }
async-trait = { workspace = true }
color-eyre = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
starknet = { workspace = true }
starknet-accounts = { workspace = true }
starknet-contract = { workspace = true }
starknet-core = { workspace = true }
starknet-crypto = { workspace = true }
starknet-ff = { workspace = true }
starknet-instance = { path = "../starknet-instance" }
starknet-providers = { workspace = true }
starknet-signers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
