[package]
name = "appchain-utils"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
color-eyre = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
starknet = { workspace = true }
starknet-accounts = { workspace = true }
starknet-contract = { workspace = true }
starknet-core = { workspace = true }
starknet-ff = { workspace = true }
starknet-providers = { workspace = true }
starknet-signers = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
