[package]
name = "common"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
starknet-accounts = { workspace = true }
starknet-providers = { workspace = true }
starknet-signers = { workspace = true }
starknet-proxy-client = { path = "../../starknet-proxy-client" }
starknet-contract = { workspace = true }
starknet-core = { workspace = true }
starknet-crypto = { workspace = true }
starknet-ff = { workspace = true }
url = { workspace = true }
starknet-instance = { path = "../starknet-instance" }
