[package]
name = "common"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
starknet-providers = { workspace = true }
starknet-core = { workspace = true }
num-traits = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
starknet-accounts = { workspace = true }
starknet-signers = { workspace = true }
starknet-ff = { workspace = true }
