[package]
name = "starknet-instance"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
appchain-utils = { path = "../appchain-utils" }
async-trait = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
starknet = { workspace = true }
starknet-accounts = { workspace = true }
starknet-contract = { workspace = true }
starknet-core = { workspace = true }
starknet-ff = { workspace = true }
starknet-providers = { workspace = true }
starknet-signers = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
