[package]
name = "verifier-contract-client"
authors.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
starknet = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
appchain-utils = { path = "../appchain-utils" }
tokio = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
async-trait = { workspace = true }
starknet-accounts = { workspace = true }
starknet-core = { workspace = true }
starknet-ff = { workspace = true }
starknet-providers = { workspace = true }
url = { workspace = true }
color-eyre = { workspace = true }